# jest

./: .gitmodules  CMakeLists.txt
resources/: resources.qrc
resources/architecture/: wrapper.cpp
resources/templates/: new_cxx.cxx
sources/: jest.cpp  jest_app.cpp  jest_app.h  jest_client.cpp  jest_client.h  jest_dsp.cpp  jest_dsp.h  jest_file_helpers.cpp  jest_file_helpers.h  jest_main_window.ui  jest_parameters.cpp  jest_parameters.h  jest_settings_panel.cpp  jest_settings_panel.h  jest_settings_panel.ui  jest_worker.cpp  jest_worker.h
sources/faust/: MyQTUI.cpp  MyQTUI.h
sources/utility/: logs.cpp  logs.h
